--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My current favourite song is 
+		<a href="https://www.youtube.com/watch?v=Gp1RNYBckBs&list=RDGp1RNYBckBs&start_radio=1">[song_name]</a>
+	</h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
